--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@ button{
 }
 button:hover{background:#dadce0;}
 .header-login{text-align:center;padding:40px;background:white;box-shadow:0 1px 3px rgba(0,0,0,0.1);}
-.header-login img{max-width:150px}
 .login-container{display:flex;justify-content:center;gap:40px;margin-top:60px;}
 .login-box{
     width:220px;height:220px;border-radius:16px;background:white;
@@ -61,9 +60,7 @@ button:hover{background:#dadce0;}
 
 <div id="loginScreen">
 <div class="header-login">
-<img src="logo-panobianco.png">
 <h2>AGENDAMENTO AVALIAÇÃO FÍSICA</h2>
-<h3>VILA IMPÉRIO - <span id="anoAtual"></span></h3>
 </div>
 <div class="login-container">
 <div class="login-box" onclick="loginAdmin()">ADMIN</div>
@@ -75,7 +72,6 @@ button:hover{background:#dadce0;}
 <div id="app" class="layout" style="display:none;">
 <div class="sidebar">
 <div class="sidebar-header">
-<img src="logo-panobianco.png" style="max-width:80px">
 <h4 id="usuario"></h4>
 </div>
 <div id="menu"></div>
@@ -86,54 +82,74 @@ button:hover{background:#dadce0;}
 </div>
 </div>
 
-<!-- FIREBASE COMPAT -->
-<script src="https://www.gstatic.com/firebasejs/12.9.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore-compat.js"></script>
+<script type="module">
 
-<script>
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+import { getFirestore, collection, addDoc, deleteDoc, updateDoc, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-firestore.js";
+
+/* CONFIG FIREBASE */
 const firebaseConfig = {
-  apiKey: "SUA_API_KEY",
-  authDomain: "SEU_AUTH_DOMAIN",
-  projectId: "SEU_PROJECT_ID",
-  storageBucket: "SEU_STORAGE_BUCKET",
-  messagingSenderId: "SEU_MSG_ID",
-  appId: "SEU_APP_ID"
+  apiKey: "COLE_AQUI",
+  authDomain: "COLE_AQUI",
+  projectId: "COLE_AQUI",
+  storageBucket: "COLE_AQUI",
+  messagingSenderId: "COLE_AQUI",
+  appId: "COLE_AQUI"
 };
 
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
+/* ================= ESTADO ================= */
 const horarios=["06:30","06:50","07:50","08:10","08:30","08:50","09:10","09:30","16:00","16:20","16:40","17:00","17:20","17:40","18:00","18:20","18:40","19:20","19:40","21:00","21:20"];
 
 let state={tipo:null,nome:null,mes:new Date().getMonth(),ano:new Date().getFullYear(),modo:null,dataAtual:null};
+
 let agendamentos=[];
 let bloqueios=[];
 let recepcionistas=[];
 
-document.getElementById("anoAtual").innerText=new Date().getFullYear();
-
-/* REALTIME */
-db.collection("agendamentos").onSnapshot(s=>{
-agendamentos=s.docs.map(d=>({...d.data(),docId:d.id}));
-if(state.dataAtual) abrirDia(state.dataAtual);
-else renderCalendario();
-});
-db.collection("bloqueios").onSnapshot(s=>{
-bloqueios=s.docs.map(d=>({...d.data(),docId:d.id}));
-renderCalendario();
-});
-db.collection("recepcionistas").onSnapshot(s=>{
-recepcionistas=s.docs.map(d=>({...d.data(),docId:d.id}));
+/* ================= REALTIME ================= */
+onSnapshot(collection(db,"agendamentos"), snap=>{
+    agendamentos=snap.docs.map(d=>({...d.data(),idDoc:d.id}));
+    if(state.dataAtual) abrirDia(state.dataAtual);
+    else renderCalendario();
 });
 
-/* LOGIN */
-function loginAdmin(){if(prompt("Senha Admin:")!=="696907")return;state.tipo="admin";state.nome="ADMIN";entrar();}
-function loginRecepcao(){let nome=prompt("Nome:");let senha=prompt("Senha:");let u=recepcionistas.find(r=>r.nome===nome&&r.senha===senha);if(!u)return alert("Login inválido");state.tipo="recepcao";state.nome=nome;entrar();}
-function loginProfessor(){state.tipo="professor";state.nome="PROFESSOR";entrar();}
-function entrar(){document.getElementById("loginScreen").style.display="none";document.getElementById("app").style.display="flex";document.getElementById("usuario").innerText=state.nome;renderMenu();renderCalendario();}
-function logout(){location.reload();}
+onSnapshot(collection(db,"bloqueios"), snap=>{
+    bloqueios=snap.docs.map(d=>({...d.data(),idDoc:d.id}));
+    renderCalendario();
+});
 
-/* MENU */
+onSnapshot(collection(db,"recepcionistas"), snap=>{
+    recepcionistas=snap.docs.map(d=>({...d.data(),idDoc:d.id}));
+});
+
+/* ================= LOGIN ================= */
+window.loginAdmin=function(){
+    if(prompt("Senha Admin:")!=="696907") return;
+    state.tipo="admin";state.nome="ADMIN";entrar();
+}
+window.loginRecepcao=function(){
+    let nome=prompt("Nome:");
+    let senha=prompt("Senha:");
+    let u=recepcionistas.find(r=>r.nome===nome && r.senha===senha);
+    if(!u) return alert("Login inválido");
+    state.tipo="recepcao";state.nome=nome;entrar();
+}
+window.loginProfessor=function(){
+    state.tipo="professor";state.nome="PROFESSOR";entrar();
+}
+function entrar(){
+    document.getElementById("loginScreen").style.display="none";
+    document.getElementById("app").style.display="flex";
+    document.getElementById("usuario").innerText=state.nome;
+    renderMenu();
+    renderCalendario();
+}
+window.logout=function(){location.reload();}
+
+/* ================= MENU ================= */
 function renderMenu(){
 let m=document.getElementById("menu");
 m.innerHTML="";
@@ -144,23 +160,171 @@ m.innerHTML+=`<button onclick="state.modo='bloqDia';renderCalendario()">🚫 Blo
 m.innerHTML+=`<button onclick="state.modo='bloqHora';renderCalendario()">⛔ Bloquear Horário</button>`;
 m.innerHTML+=`<button onclick="abrirBusca()">🔎 Buscar por ID</button>`;
 }
-if(state.tipo==="admin"){m.innerHTML+=`<button onclick="abrirRecep()">👥 Recepcionistas</button>`;}
+if(state.tipo==="admin"){
+m.innerHTML+=`<button onclick="abrirRecep()">👥 Recepcionistas</button>`;
+}
 }
 
-/* AGENDAMENTO */
+/* ================= CALENDÁRIO ================= */
+function renderCalendario(){
+let main=document.getElementById("main");
+main.innerHTML=`<div class="cal-header">
+<button onclick="mesAnt()">◀</button>
+<h2>${nomeMes(state.mes)} ${state.ano}</h2>
+<button onclick="mesProx()">▶</button>
+</div>
+<div class="cal-grid" id="grid"></div>`;
+let grid=document.getElementById("grid");
+let primeiro=new Date(state.ano,state.mes,1).getDay();
+let total=new Date(state.ano,state.mes+1,0).getDate();
+for(let i=0;i<primeiro;i++)grid.appendChild(document.createElement("div"));
+for(let d=1;d<=total;d++){
+let data=formatar(state.ano,state.mes,d);
+let div=document.createElement("div");
+div.className="dia";
+let bloqueio=bloqueios.find(b=>b.data===data && b.tipo==="dia");
+if(bloqueio)div.classList.add("bloqueado");
+div.innerText=d;
+div.onclick=()=>clicarDia(data);
+grid.appendChild(div);
+}
+}
+
+function clicarDia(data){
+if(state.modo==="bloqDia"){
+let existe=bloqueios.find(b=>b.data===data && b.tipo==="dia");
+if(!existe){
+addDoc(collection(db,"bloqueios"),{data,tipo:"dia"});
+}else if(state.tipo==="admin"){
+deleteDoc(doc(db,"bloqueios",existe.idDoc));
+}
+return;
+}
+abrirDia(data);
+}
+
+/* ================= DIA ================= */
+function abrirDia(data){
+state.dataAtual=data;
+let main=document.getElementById("main");
+main.innerHTML=`<h2>${data}</h2>
+<button onclick="renderCalendario()">⬅ Voltar</button>
+<div class="grid-horarios" id="horarios"></div>
+<div id="lista"></div>`;
+let grid=document.getElementById("horarios");
+
+horarios.forEach(h=>{
+let btn=document.createElement("button");
+btn.className="horario";
+btn.innerText=h;
+let ocupado=agendamentos.find(a=>a.data===data && a.horario===h);
+let bloqueado=bloqueios.find(b=>b.data===data && b.horario===h);
+if(ocupado){btn.classList.add("ocupado");btn.disabled=true;}
+if(bloqueado){
+btn.classList.add("bloqueado");
+if(state.tipo==="admin"){
+btn.onclick=()=>deleteDoc(doc(db,"bloqueios",bloqueado.idDoc));
+}
+}else{
+if(state.modo==="agendar" && !ocupado){
+btn.onclick=()=>agendar(data,h);
+}
+if(state.modo==="bloqHora" && !ocupado){
+btn.onclick=()=>addDoc(collection(db,"bloqueios"),{data,horario:h,tipo:"hora"});
+}
+}
+grid.appendChild(btn);
+});
+mostrarLista(data);
+}
+
+/* ================= AGENDAR ================= */
 function agendar(data,horario){
 let nome=prompt("Nome do aluno:");
 let id=prompt("ID numérico até 10 dígitos:");
 if(!/^[0-9]{1,10}$/.test(id)) return alert("ID inválido");
-db.collection("agendamentos").add({nome,id,data,horario,status:"pendente",criadoPor:state.nome});
+addDoc(collection(db,"agendamentos"),{nome,id,data,horario,status:"pendente",criadoPor:state.nome});
 }
 
-/* RESTANTE DO SISTEMA SEGUE IDÊNTICO AO SEU ORIGINAL */
-/* (Bloqueios, busca, status, calendário, etc) */
+/* ================= LISTA ================= */
+function mostrarLista(data){
+let lista=agendamentos.filter(a=>a.data===data);
+let div=document.getElementById("lista");
+div.innerHTML="<h3>Agendamentos:</h3>";
+lista.forEach(a=>{
+div.innerHTML+=`
+<div class="card">
+<b>${a.horario}</b> - ${a.nome} (ID:${a.id})<br>
+<span class="status ${a.status}">${a.status}</span><br>
+${state.tipo!=="professor"?
+`<button onclick="updateStatus('${a.idDoc}','mensagem')">Mensagem</button>
+<button onclick="updateStatus('${a.idDoc}','confirmado')">Confirmar</button>
+<button onclick="deleteDocFire('${a.idDoc}')">Cancelar</button>`
+:
+`<button onclick="updateStatus('${a.idDoc}','realizado')">Realizado</button>
+<button onclick="updateStatus('${a.idDoc}','faltou')">Faltou</button>`}
+</div>`;
+});
+}
 
-/* Funções util */
-function mesAnt(){state.mes--;if(state.mes<0){state.mes=11;state.ano--;}renderCalendario();}
-function mesProx(){state.mes++;if(state.mes>11){state.mes=0;state.ano++;}renderCalendario();}
+window.updateStatus=function(id,status){
+updateDoc(doc(db,"agendamentos",id),{status});
+}
+window.deleteDocFire=function(id){
+deleteDoc(doc(db,"agendamentos",id));
+}
+
+/* ================= BUSCA ================= */
+window.abrirBusca=function(){
+let main=document.getElementById("main");
+main.innerHTML=`<h2>Buscar por ID</h2>
+<input id="buscaID">
+<button onclick="buscarID()">Buscar</button>
+<button onclick="renderCalendario()">Voltar</button>
+<div id="resultado"></div>`;
+}
+window.buscarID=function(){
+let id=document.getElementById("buscaID").value.trim();
+let encontrados=agendamentos.filter(a=>a.id===id);
+let div=document.getElementById("resultado");
+div.innerHTML="";
+if(encontrados.length===0){
+div.innerHTML="<div class='card'>Nenhum encontrado</div>";
+return;
+}
+encontrados.forEach(a=>{
+div.innerHTML+=`<div class="card">${a.nome}<br>${a.data} - ${a.horario}<br>${a.status}</div>`;
+});
+}
+
+/* ================= RECEP ================= */
+window.abrirRecep=function(){
+let main=document.getElementById("main");
+main.innerHTML=`<h2>Recepcionistas</h2>
+<input id="nomeR" placeholder="Nome">
+<input id="senhaR" placeholder="Senha">
+<button onclick="addRecep()">Cadastrar</button>
+<button onclick="renderCalendario()">Voltar</button>
+<div id="listaR"></div>`;
+renderListaR();
+}
+window.addRecep=function(){
+let nome=document.getElementById("nomeR").value.trim();
+let senha=document.getElementById("senhaR").value.trim();
+addDoc(collection(db,"recepcionistas"),{nome,senha});
+}
+function renderListaR(){
+let div=document.getElementById("listaR");
+div.innerHTML="";
+recepcionistas.forEach(r=>{
+div.innerHTML+=`<div class="card">${r.nome}
+<button onclick="deleteDoc(collection(db,'recepcionistas').doc('${r.idDoc}'))">Excluir</button></div>`;
+});
+}
+
+/* ================= UTIL ================= */
+window.mesAnt=function(){state.mes--;if(state.mes<0){state.mes=11;state.ano--;}renderCalendario();}
+window.mesProx=function(){state.mes++;if(state.mes>11){state.mes=0;state.ano++;}renderCalendario();}
 function formatar(a,m,d){return a+"-"+String(m+1).padStart(2,"0")+"-"+String(d).padStart(2,"0");}
 function nomeMes(m){return["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"][m];}
 
