--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@ button:hover{background:#dadce0;}
 .confirmado{background:#1a73e8;color:white;}
 .realizado{background:#34a853;color:white;}
 .faltou{background:#ea4335;color:white;}
+  /* BOTÃO ATIVO DO MENU */
+.sidebar button.ativo{
+  background:#1a73e8;
+  color:white;
+  font-weight:600;
+}
+
+/* EFEITO DE CLIQUE */
+.sidebar button:active{
+  transform:scale(0.96);
+  transition:0.1s;
+}
 </style>
 
 <!-- FIREBASE -->
@@ -173,15 +185,24 @@ function logout(){location.reload();}
 function renderMenu(){
 let m=document.getElementById("menu");
 m.innerHTML="";
-m.innerHTML+=`<button onclick="state.modo=null;renderCalendario()">📆 Calendário</button>`;
-if(state.tipo!=="professor"){
-m.innerHTML+=`<button onclick="state.modo='agendar';renderCalendario()">➕ Agendar</button>`;
-m.innerHTML+=`<button onclick="state.modo='bloqDia';renderCalendario()">🚫 Bloquear Dia</button>`;
-m.innerHTML+=`<button onclick="state.modo='bloqHora';renderCalendario()">⛔ Bloquear Horário</button>`;
-m.innerHTML+=`<button onclick="abrirBusca()">🔎 Buscar por ID</button>`;
+
+function botao(label, modo){
+  return `<button class="${state.modo===modo?'ativo':''}" 
+          onclick="state.modo='${modo}'; state.dataAtual=null; renderMenu(); renderCalendario();">
+          ${label}</button>`;
 }
+
+m.innerHTML += botao("📆 Calendário", null);
+
+if(state.tipo!=="professor"){
+  m.innerHTML += botao("➕ Agendar", "agendar");
+  m.innerHTML += botao("🚫 Bloquear Dia", "bloqDia");
+  m.innerHTML += botao("⛔ Bloquear Horário", "bloqHora");
+  m.innerHTML += `<button onclick="state.modo=null; renderMenu(); abrirBusca()">🔎 Buscar por ID</button>`;
+}
+
 if(state.tipo==="admin"){
-m.innerHTML+=`<button onclick="abrirRecep()">👥 Recepcionistas</button>`;
+  m.innerHTML += `<button onclick="state.modo=null; renderMenu(); abrirRecep()">👥 Recepcionistas</button>`;
 }
 }
 
